style/fix: item jumps on page init due to position relative navbar

--- a/frontend/src/app/feature/room-view/pages/room-details/room-details.page.scss
+++ b/frontend/src/app/feature/room-view/pages/room-details/room-details.page.scss
@@ -1,5 +1,5 @@
 .no-data {
-    position: fixed;
+    position: absolute;
     top:50%;
     left: 50%;
     transform: translate(-50%, -50%);
